# empower_python

./: .gitignore  LICENSE  README.md  development.py  main.py  pyproject.toml  sandbox.py
documentation/: article.tex  manual.tex
empower/: application.py  main.py
empower/gui/: mainwindow.py  utilities.py
empower/help/empower/: template.emp
empower/help/empower/mie_v1/: mie.py  mie_scatter_v1.tex
empower/help/empower/mie_v2/: mie_scatter_v2.tex
fem/Pelosi/CODES/ABC/CYL/: elea.f
fem/Pelosi/CODES/ABC/OWG/: ehd_subs.f  elea.f  owg.f  owg_subs.f
fem/Pelosi/CODES/EHDEV/: README
fem/Pelosi/CODES/GRATING/: README  g_subs.f  grating.f
fem/Pelosi/CODES/WG/: elex.f  wg.f
fem/Pelosi/TOOLS/mains/: do_del.f  do_ren.f  postpro.f
fem/Pelosi/fortran/: README  README.md
fem/Pelosi/fortran/codes/ABC/: README
fem/Pelosi/fortran/codes/ABC/CYL/: cyl.f  cyl_subs.f
fem/Pelosi/fortran/codes/EHDEV/: ehdev.f
fem/Pelosi/fortran/codes/WG/: README  wgsubs.f
fem/Pelosi/fortran/laplace/: README  laplace.f
fem/Pelosi/fortran/tools/: README
fem/Pelosi/fortran/tools/lib/: band.f  bandex.f  bsolve.f  delaunay.f  elee.f  elen.f  femps.f  findeqn.f  pnjexp.f  read.f  readn.f  renumber.f  solve.f  write.f  writecr.f
fem/Pelosi/fortran/tools/mains/: do_bex.f  do_f2ps.f  mesh.f
fem/Pelosi/python/tools/lib/: readn.py
miescatter/: demoMie.m  getMieScatter.m  mie.m  mie_abcd.m  mie_pt.m  mie_s12.m  sandbox_mie.m
miescatter/maetzler/: mie.m  mie_abs.m  mie_esquare.m  mie_thetascan.m  mie_xscan.m
